Rollbacked and then fixed booking overlapping issue

--- a/public/style.css
+++ b/public/style.css
@@ -553,3 +553,10 @@ button:hover {
     transform: translateY(-2px);
 }
 
+.footer {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 1.2em;
+    color: #5e6472;
+    font-weight: bold;
+}
